[gd_scene load_steps=21 format=3 uid="uid://cm0wuadgobsag"]

[ext_resource type="Script" path="res://characterMovementTest.gd" id="1_sivaa"]
[ext_resource type="Script" path="res://sword.gd" id="2_2mtle"]
[ext_resource type="Texture2D" uid="uid://b3y41oi1yn6ar" path="res://diamond sword.png" id="2_pmcqa"]
[ext_resource type="Script" path="res://reset.gd" id="3_mgdo7"]
[ext_resource type="Script" path="res://stab.gd" id="4_5fauk"]
[ext_resource type="PackedScene" uid="uid://8giaiei6278o" path="res://Character/Player.tscn" id="6_ovp7o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj14g"]
size = Vector2(146.286, 438.857)

[sub_resource type="Animation" id="Animation_c3khk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}

[sub_resource type="Animation" id="Animation_k4kgr"]
resource_name = "swing"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, -16), Vector2(18, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785398, 0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kcfec"]
_data = {
"RESET": SubResource("Animation_c3khk"),
"swing": SubResource("Animation_k4kgr")
}

[sub_resource type="Animation" id="Animation_xoyyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}

[sub_resource type="Animation" id="Animation_mglav"]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(18, -10), Vector2(12, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785398, -0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxqvp"]
_data = {
"RESET": SubResource("Animation_xoyyo"),
"reset": SubResource("Animation_mglav")
}

[sub_resource type="Animation" id="Animation_hi84h"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&""],
"method": &"disable_attacking"
}]
}

[sub_resource type="Animation" id="Animation_ye7sd"]
resource_name = "stab"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, -16), Vector2(12, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785398, -0.785398]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stab")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7pln"]
_data = {
"RESET": SubResource("Animation_hi84h"),
"stab": SubResource("Animation_ye7sd")
}

[sub_resource type="Animation" id="Animation_mv1cm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpinAttackControl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpinAttackControl:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yapkr"]
resource_name = "spin attack"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&""],
"method": &"disable_attacking"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpinAttackControl:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpinAttackControl:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hu74"]
_data = {
"RESET": SubResource("Animation_mv1cm"),
"spin attack": SubResource("Animation_yapkr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0wm1p"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_right = 1160.0
offset_bottom = 648.0
color = Color(0.117647, 0.741176, 0.0784314, 1)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(37, 44)
script = ExtResource("1_sivaa")

[node name="Control" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Indicator" type="ColorRect" parent="CharacterBody2D/Control"]
layout_mode = 0
offset_left = -2.5
offset_top = -25.0
offset_right = 2.5
offset_bottom = -20.0
pivot_offset = Vector2(2.5, 25)

[node name="Sword" type="Control" parent="CharacterBody2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2mtle")

[node name="SpinAttackControl" type="Control" parent="CharacterBody2D/Control/Sword"]
layout_mode = 3
anchors_preset = 0
offset_right = 3.0
offset_bottom = 2.0

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/Control/Sword/SpinAttackControl"]
position = Vector2(12, -16)
rotation = -0.785398
scale = Vector2(0.0410156, 0.0410156)
texture = ExtResource("2_pmcqa")

[node name="Area2D" type="Area2D" parent="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D/Area2D"]
position = Vector2(103.44, -103.44)
rotation = 0.785398
shape = SubResource("RectangleShape2D_vj14g")

[node name="Swing" type="AnimationPlayer" parent="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_kcfec")
}

[node name="Reset" type="AnimationPlayer" parent="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_hxqvp")
}
script = ExtResource("3_mgdo7")

[node name="Stab" type="AnimationPlayer" parent="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_q7pln")
}
script = ExtResource("4_5fauk")

[node name="SpinAttack" type="AnimationPlayer" parent="CharacterBody2D/Control/Sword/SpinAttackControl"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7hu74")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_0wm1p")

[node name="Player" parent="." instance=ExtResource("6_ovp7o")]

[connection signal="animation_finished" from="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D/Swing" to="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D/Reset" method="_on_swing_animation_finished"]
[connection signal="animation_finished" from="CharacterBody2D/Control/Sword/SpinAttackControl/Sprite2D/Reset" to="CharacterBody2D" method="disable_attacking"]
